# backup-telebot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
scripts/: get_chat_id.py  sample_jobs.toml  sudoers.d.example
src/tgbot_backup/: __init__.py  cli.py  config.py  jobs.py  notify.py  pipeline.py  scheduler.py  service.py  telegram_api.py  telegram_commands.py
systemd/: telegram-backup-bot-docker.service  telegram-backup-bot.service
tests/: conftest.py  test_commands.py  test_config.py  test_jobs.py  test_pipeline.py  test_scheduler.py  test_service.py  test_telegram_api.py
